# git-ignore

./: .coverage  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
src/: git.rs  ignore.rs  lib.rs  main.rs
src/git_ignore/: __init__.py  git_utils.py  ignore_manager.py  main.py
tests/: __init__.py  integration_tests.rs
tests/integration/: test_cli.py
tests/unit/: test_git_utils.py  test_ignore_manager.py  test_main.py
